--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: 'Montserrat', sans-serif;
-   background: url("assets/images/header.jpg") no-repeat center center fixed;
+   background: url("/assets/images/header.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
