--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   font-family: 'Montserrat', sans-serif;
 /*    background: url("/header.png") no-repeat center center fixed; */
-   background-image: url('./header.png');
+/*    background-image: url('./header.png'); */
 /*   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
