--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ html, body {
   height: 100%;
   font-family: 'Montserrat', sans-serif;
 /*    background: url("/header.png") no-repeat center center fixed; */
-/*    background-image: url('./header.png'); */
-/*   background-repeat: no-repeat;
+   background-image: url('/header.png');
+   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
+  background-position: center center;
  -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
-} */
+} 
 
 h1 {
   font-size: 3rem;
