--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
    background-image: url('/header.png');
    background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center center;
+  background-position: center;
  -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
