--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ html, body {
   width: 100%;
   height: 100%;
   font-family: 'Montserrat', sans-serif;
-/*    background: url("/header.png") no-repeat center center fixed; */
-   background-image: url('/header.png');
+   background: url("/header.png") no-repeat center center fixed;
+/*    background-image: url('/header.png');
    background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center;
+  background-position: center; */
  -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
